# fallow-cov-protocol

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  release.toml  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: protocol-reviewer.md  rust-reviewer.md  user-panel.md
.claude/rules/: code-quality.md  protocol-versioning.md  team-assembly.md  testing.md
.claude/skills/fallow-cov-protocol-release/: skill.md
.claude/skills/release/: skill.md
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md  zizmor.yml
.github/workflows/: ci.yml  commitlint.yml  dependabot-auto-merge.yml  release.yml
src/: lib.rs
