[package]
name = "fallow-cov-protocol"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Versioned JSON envelope types shared between the fallow CLI and the fallow-cov production-coverage sidecar."
repository = "https://github.com/fallow-rs/fallow-cov-protocol"
homepage = "https://fallow.tools"
readme = "README.md"
keywords = ["fallow", "coverage", "protocol", "dead-code", "v8"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints.rust]
# TODO: re-enable before 1.0.0 publish and add per-field docs.
missing_docs = "allow"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
