[package]
name = "fallow-cov-protocol"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Versioned JSON envelope types shared between the fallow CLI and Fallow Runtime's production-coverage sidecar."
repository = "https://github.com/fallow-rs/fallow-cov-protocol"
homepage = "https://fallow.tools"
readme = "README.md"
keywords = ["fallow", "coverage", "protocol", "dead-code", "v8"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"
non_ascii_idents = "warn"
# TODO: flip to "deny" before 1.0.0 publish (see CLAUDE.md).
missing_docs = "warn"

[lints.clippy]
# Lint groups (individual overrides below rely on priority -1).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints: discipline for a contract crate. Only lints that exist
# in the declared MSRV (1.75) toolchain are listed here; newer restriction
# lints are intentionally deferred until MSRV bumps.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
exit = "warn"
clone_on_ref_ptr = "warn"
get_unwrap = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
self_named_module_files = "warn"
allow_attributes_without_reason = "warn"
filetype_is_file = "warn"
rest_pat_in_fully_bound_structs = "warn"

# Pedantic allow-list: documented and kept short.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

# Nursery false positives for a match-heavy crate.
option_if_let_else = "allow"
missing_const_for_fn = "allow"

# Cargo lints: transitive version conflicts in the ecosystem are unavoidable.
multiple_crate_versions = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
